tests/stage3/semantic_import_group_method_call_arg_count_extra.err
type error
line: 15
argument count mismatch
expected: 1
got: 2
