tests/stage3/semantic_import_group_method_call_arg_count_extra.imp
module app.main

struct Box {
    value: i32
}

import app.main.{get as alias}

function get(self: Box) -> i32 {
    return self.value
}

function main() {
    value box: Box = Box { value: 7 }
    print(box.alias(1))
}
